# cover_type_prediction

./: Makefile  README.md  pyproject.toml  requirements.txt
cover_type_prediction/: __init__.py  dataset.py  features.py  plots.py
cover_type_prediction/modeling/v1/: predict.py  train.py
cover_type_prediction/modeling/v2/: train.py
models/v1/: covertype_gbm_model.joblib  training_classification_report.txt
models/v2/: covertype_svm_model.joblib  training_classification_report.txt
notebooks/: 1v1-KW-exploratory-analysis.ipynb
