[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cover_type_prediction"
version = "0.0.1"
description = "Cover (tree species) prediction using sklearn data"
authors = [
  { name = "Konner Winkley" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["cover_type_prediction"]
include = ["pyproject.toml", "cover_type_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["cover_type_prediction"]
force-sort-within-sections = true

